fixed flickering div

--- a/src/containers/Styles.css
+++ b/src/containers/Styles.css
@@ -123,7 +123,7 @@ body {
 }
 .productListDiv div div button:active {
   background: #ffc33d;
-  font-size: 1.1em;
+  transform: scale(1.1, 1.1);
 }
 .productavailability {
   line-height: 1px;
